tests/cases/ok/dict_values.p4
def main() -> None:
    colors: dict[str, str] = {"apple": "red", "sky": "blue"}
    vals: list[str] = colors.values()
    print(vals)
    print(len(vals))
