tests/cases/fail/dict_membership_right_type.p4
def main() -> None:
    xs: list[str] = ["apple"]
    print("apple" in xs)
